[fix] Improved vertical spacing.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,9 +25,9 @@
     -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
     -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
     box-shadow: 0 0 10px rgba(0,0,0,.3);
-    margin: 10% auto;
+    margin: 1em auto;
     max-width: 1000px;
-    padding: 2.225%;
+    padding: 1em 2.225%;
     width: 90%;
   }
 
